--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "PayPayGen"
+name = "paypay_gen"
 version = "0.1.0"
 edition = "2021"
 
@@ -7,3 +7,9 @@ edition = "2021"
 
 [dependencies]
 rand = "0.8.5"
+tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread"] }
+colored = "2.0.4"
+reqwest = { version = "0.11.22", features = ["json", "socks"] }
+uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
