--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.5"
-tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread"] }
+rand = { version = "0.8.5", features = ["std_rng"] }
+tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
 colored = "2.0.4"
 reqwest = { version = "0.11.22", features = ["json", "socks"] }
 uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }
